<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PhoneActivity"
        android:id="@+id/layout_refresh_phone">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:id="@+id/TOP_PAGE_INFO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:textSize="25sp"
                android:fontFamily="cursive"
                android:text="@string/contacts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <ListView
                android:id="@+id/contacts_item"
                android:layout_width="wrap_content"
                android:layout_height="450sp"
                android:layout_marginHorizontal="30sp"
                android:layout_marginTop="30sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/TOP_PAGE_INFO">

        </ListView>
        <LinearLayout
                android:id="@+id/btn_page_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginHorizontal="20sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/contacts_item">

            <Button
                    android:text="@string/delete"
                    android:id="@+id/delete_contact_page_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp">
            </Button>
            <Button
                    android:text="@string/create"
                    android:id="@+id/create_contact_page_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp">
            </Button>
            <Button
                    android:text="@string/info"
                    android:id="@+id/info_microservices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp">
            </Button>

        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_marginHorizontal="20sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/contacts_item">
            <Button
                    android:text="@string/next"
                    android:id="@+id/next_page_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp"
                    android:layout_gravity="center">
            </Button>
        </LinearLayout>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>