<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:id="@+id/layout_refresh">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/text_LOGO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LOGO"
                android:layout_gravity="center"
                android:layout_marginTop="250sp"
                android:textSize="40sp"
                android:fontFamily="cursive"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/text_LOGIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="25sp"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_LOGO"/>

        <EditText
                android:id="@+id/log_password"
                android:layout_width="250sp"
                android:layout_height="45sp"
                android:hint="@string/pass"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_LOGIN"
                android:autofillHints="no"/>
    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>