<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PhoneActivity2"
        android:id="@+id/layout_refresh_phone">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:id="@+id/text_activity_phone_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80sp"
                android:textSize="25sp"
                android:fontFamily="casual"
                android:text="@string/Quests"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400sp"
                android:orientation="vertical"
                android:layout_marginVertical="50sp"
                android:layout_marginHorizontal="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <Button
                        android:layout_marginTop="100sp"
                        android:id="@+id/btn_find_activity_phone_2"
                        android:text="@string/findByPhone"
                        android:textSize="17sp"
                        android:fontFamily="casual"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="7sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                />
                <Button
                        android:id="@+id/btn_comment_activity_phone_2"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="7sp"
                        android:text="@string/addComment"
                        android:textSize="17sp"
                        android:fontFamily="casual"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                />
                <Button
                        android:id="@+id/btn_spam_activity_phone_2"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="7sp"
                        android:text="@string/voteSpam"
                        android:textSize="17sp"
                        android:fontFamily="casual"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                />
        </LinearLayout>

    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>