<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/frame_fragment_layout_spam"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.ContactsAddSpamByPhone">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_marginVertical="30sp"
                android:layout_marginHorizontal="100sp"
                android:text="@string/voteSpam"
                android:textSize="30sp"
                android:textColor="@color/teal_700"
                android:textAlignment="center"
                android:fontFamily="casual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/add_vote_spam_phoneNumber"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:textAlignment="center"
                android:inputType="phone"
                android:hint="@string/phone_number"
        />
        <Button
                android:id="@+id/vote_contact_btn"
                android:layout_width="200sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/vote"
                android:textSize="18sp"
                android:fontFamily="casual"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220sp"
                android:orientation="vertical"
                android:layout_marginHorizontal="30sp">

            <TextView
                    android:id="@+id/vote_contact_info_nickname_text"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="40sp"
                    android:text=""
                    android:textSize="40sp"
                    android:fontFamily="cursive"
                    android:textAlignment="center"/>
            <TextView
                    android:id="@+id/vote_contact_info_surname_text"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:textSize="17sp"
                    android:fontFamily="cursive"/>

            <TextView
                    android:id="@+id/vote_contact_info_phone_text"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:textSize="40sp"
                    android:fontFamily="cursive"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>