<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CommentContactActivity"
        android:id="@+id/layout_refresh_phone">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/title_page_add_comment"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="40sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/teal_700"
                android:fontFamily="cursive"
                android:text="@string/add_comment_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:id="@+id/edit_text_phone_number_page_add_comment"
                android:layout_marginHorizontal="60sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="casual"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:layout_width="222dp"
                android:layout_height="70sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/title_comment_page_add_comment"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="10sp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textColor="@color/teal_700"
                android:fontFamily="cursive"
                android:text="@string/comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/edit_text_comment_page_add_comment"
                android:layout_marginHorizontal="60sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="casual"
                android:inputType="text"
                android:hint="@string/addComment"
                android:layout_width="300sp"
                android:layout_height="170sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
                android:layout_marginTop="40sp"
                android:layout_width="300sp"
                android:orientation="horizontal"
                android:layout_height="100sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            <Button
                    android:id="@+id/btn_add_comment_page_add_comment"
                    android:text="@string/addComment"
                    android:fontFamily="casual"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />
        </LinearLayout>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>