<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/frame_fragment_layout_find"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.ContactsFindByPhone">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_marginVertical="30sp"
                android:layout_marginHorizontal="100sp"
                android:text="@string/findByPhone"
                android:textSize="30sp"
                android:textColor="@color/teal_700"
                android:textAlignment="center"
                android:fontFamily="casual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/find_Contact_page_btn"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:textAlignment="center"
                android:inputType="phone"
                android:hint="@string/phone_number"
        />
        <Button
                android:id="@+id/find_contact_page_btn"
                android:layout_width="200sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/find"
                android:textSize="18sp"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400sp"
                android:orientation="vertical"
                android:layout_marginHorizontal="30sp">

            <TextView
                    android:id="@+id/contact_info_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:textSize="40sp"
                    android:fontFamily="cursive"
                    android:textAlignment="center"/>
            <TextView
                    android:id="@+id/contact_info_surname_text"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:textSize="17sp"
                    android:fontFamily="cursive"/>

            <TextView
                    android:id="@+id/contact_info_spam_text"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:textSize="40sp"
                    android:fontFamily="cursive"/>
            <TextView
                    android:id="@+id/contact_info_phone_text"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:textSize="40sp"
                    android:fontFamily="cursive"/>

            <ListView
                    android:id="@+id/contact_info_comment_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0sp"
                    android:layout_marginTop="20sp"
                    android:textAlignment="center">

            </ListView>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>